--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.15.6",
     "vue": "^2.6.14",
     "vue-qr": "^4.0.6",
+    "vue-quill-editor": "^3.0.6",
     "xlsx": "^0.17.4"
   },
   "devDependencies": {
